# react-native-mmkv-storage

./: README.md  package.json
harmony/: mmkv_storage.har
harmony/mmkv_storage/: oh-package.json5
harmony/mmkv_storage/src/main/: module.json5
harmony/mmkv_storage/src/main/cpp/: CMakeLists.txt  MMKVNativeTurboModule.cpp
harmony/mmkv_storage/src/main/cpp/Core/: MMKV.h  MMKV_Android.cpp  MMKV_IO.cpp
harmony/mmkv_storage/src/main/ets/: RNMMKVStorageTurboModule.ets  SecureKeystore.ets  Storage.ets
